# datadex

./: .alto.json  .editorconfig  .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  _quarto.yml  alto.secrets.toml  alto.toml  create_torrents.py  dashboard.qmd  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  docs.yml  etl.yml  push_data_to_iroh.sh  web.yml
api/: Dockerfile  README.md  roapi.yml
data/: .gitkeep
datadex/: __init__.py  assets.py  core.py  dag.py  dagster.py  dbt_project.py  definitions.py  jobs.py  owid.py  resources.py  torrents.py  utils.py  wdi.py
datadex/assets/: dbt.py  energy.py  huggingface.py  indicators.py  others.py  spain.py
datadex/dbt/: assets.py  definitions.py  resources.py
datadex/huggingface/: assets.py  definitions.py  resources.py
datadex/indicators/: assets.py  definitions.py
datadex/others/: assets.py  definitions.py  resources.py
datadex/plugins/: frictionless.py
datasets/: owid.py  wdi.py
datasets/owid_indicators/: README.md  datapackage.yaml  owid.py
datasets/world_development_indicators/: README.md  datapackage.yaml  wdi.py
dbt/: dbt_project.yml  packages.yml  profiles.yml
dbt/models/: all_yellow_taxi_trips.sql  climate.sql  co2_global_trend.sql  country_year_indicators.sql  country_year_indicators_schema.yml  energy_linreg_model.sql  ethereum_daily_blocks.sql  sources.yml  spain_aemet_historical_weather.sql  spain_aemet_historical_weather_schema.yml  world_development_indicators.sql
macros/: create_external_table.sql  export.sql
models/: all_yellow_taxi_trips.sql  carbon_entries.sql  co2_trend.sql  energy_yearly_averages.sql  fct_carbon_intensity__index.sql  fifa_countries_remote_source_test.sql  join.sql  schema.yml  sources.yml  taxi_vendors.sql  test.sql  yellow_taxi_vendors.sql
notebooks/: 0000-00-00-Sandbox.ipynb  2023-02-22-duckdb-ipfs.ipynb  2023-05-06-quarto.ipynb  2023-07-28-climate.ipynb  brlda.ipynb  climate.ipynb  duckdb-ipfs.ipynb  pyscript.ipynb  quarto.ipynb
portal/: _quarto.yml  dashboard.qmd  index.qmd
reports/: .gitignore  2023-01-01-Datadex.ipynb  2023-11-01-Observable.qmd  package-lock.json  package.json
rill/: .gitignore  rill.yaml
torrents/: README.md
web/: astro.config.mjs  index.html  package-lock.json  package.json  tsconfig.json
(+60 files in other folders)
