[project]
name = "datadex"
version = "1.0.0"
authors = [{ name = "David Gasquez", email = "davidgasquez@gmail.com" }]
requires-python = ">=3.11, <3.14"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.28.1",
 "huggingface-hub[hf-xet]>=0.31.4",
 "polars>=1.30.0",
]

[project.urls]
Homepage = "https://datadex.datonic.io/"
Changelog = "https://github.com/datonic/datadex/commits/main/"
Issues = "https://github.com/datonic/datadex/issues"
CI = "https://github.com/datonic/datadex/actions"

[build-system]
requires = ["uv_build>=0.6.14,<0.7"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "datadex"
module-root = ""
