[project]
name = "datadex"
version = "2.0.0"
description = "Open-source, serverless, and local-first data platform for your community"
readme = "README.md"
authors = [{ name = "David Gasquez", email = "davidgasquez@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "huggingface-hub[hf-xet]>=1.3.3",
    "polars>=1.37.1",
]

[project.urls]
Homepage = "https://datadex.datonic.io/"
Changelog = "https://github.com/datonic/datadex/commits/main/"
Issues = "https://github.com/datonic/datadex/issues"
CI = "https://github.com/datonic/datadex/actions"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.3.0",
    "ruff>=0.14.13",
    "ty>=0.0.13",
]
